<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwimTagPebbleApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="transfer_button">Transfer Stored Data</string>
    <string name="write">Write To File</string>
    <string name="test_server">Test Server</string>

</resources>
