<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.app.Main$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/server_test"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/start_button"
            android:text="@string/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
        android:id="@+id/stop_button"
        android:text="@string/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/transfer_button"
            android:text="@string/transfer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:typeface="sans" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="344dp"
            android:layout_height="50dp"
            android:id="@+id/progressBar2" />

        <TextView
            android:id="@+id/x_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/y_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/z_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_server"
        android:id="@+id/server_test"
        android:layout_above="@+id/write_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:id="@+id/write_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
